overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,7 @@
 body{
   font-family: 'Ubuntu', sans-serif;
 }
+
+.App{
+  overflow: hidden;
+}
