--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     padding-left: 50px;
-    overflow: hidden;
+    
   }
   
   .movie-images img{
